# research-stocks

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/api/: ai_routes.py  entrypoint.py
backend/src/research_stocks/: analysis.py  data_fetchers.py  etf_data.py  etf_fetchers.py  news.py  prompts.py  schemas.py  stock_data.py
backend/src/services/: stock_manager.py
backend/src/settings/: env_config.py
backend/src/utils/: logger.py  models.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: index.ts
frontend/src/components/: ErrorMessage.tsx  LoadingState.tsx  SearchBar.tsx  SentimentPanel.tsx
frontend/src/components/AnalysisReport/: ETFInfoTab.tsx  FinancialsTab.tsx  MetricCard.tsx  NewsTab.tsx  OptionsTab.tsx  QuickStat.tsx  TechnicalTab.tsx  Tooltip.tsx  helpers.ts  index.tsx  metricTooltips.tsx  types.ts
frontend/src/types/: index.ts
